// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX jBhaYg"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX bVIEYj"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX iUwrth"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oEczX hJvMVM"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oEczX fTBWJr"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX bcvidZ"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt grWraG"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX edEsCe"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX hfbpVV"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX BdQpe"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX cNRlAp"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX ldvpAa"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs iRhLvk"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
